--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html data-wf-page="65e798e3d4b6db219c70ded0" data-wf-site="65e798e3d4b6db219c70deca">
+
 <head>
   <meta charset="utf-8">
   <title>Calculator Sample</title>
@@ -8,13 +9,16 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/calculator-sample.webflow.css" rel="stylesheet" type="text/css">
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script
+    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
+
 <body>
   <div class="form-block w-form">
-    <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form" data-wf-page-id="65e798e3d4b6db219c70ded0" data-wf-element-id="6f92bd97-abfd-c0ed-480d-c563fb26a99e">
+    <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form"
+      data-wf-page-id="65e798e3d4b6db219c70ded0" data-wf-element-id="6f92bd97-abfd-c0ed-480d-c563fb26a99e">
       <div class="tab-selection">
         <div class="text-block">SHAPE: </div>
         <div data-current="Circle" data-easing="ease" data-duration-in="300" data-duration-out="100" class="w-tabs">
@@ -41,38 +45,49 @@
         <div class="text-block">SIZE:</div>
         <div data-current="Custom" data-easing="ease" data-duration-in="300" data-duration-out="100" class="w-tabs">
           <div class="tabs-menu size w-tab-menu">
-            <a data-w-tab="2&quot; x 2&quot;" class="tab-item w-inline-block w-tab-link">
-              <div>2&quot; x 2&quot;</div>
+            <a id="dimensions" data-w-tab="2 ' x 4 '" class="tab-item w-inline-block w-tab-link w--current preselected-area">
+
+              <div class="preselected-width">2 </div>' &nbsp; x &nbsp; <div class="preselected-height "> 4 </div>'
+
             </a>
-            <a data-w-tab="3&quot; x 3&quot;" class="tab-item w-inline-block w-tab-link">
-              <div>3&quot; x 3&quot;</div>
+            <a id="dimensions-2" data-w-tab="3 ' x 6 '" class="tab-item w-inline-block w-tab-link w--current preselected-area">
+              <div class="preselected-width">3 </div>' &nbsp; x &nbsp; <div class="preselected-height"> 6 </div>'
             </a>
-            <a data-w-tab="4&quot; x 4&quot;" class="tab-item w-inline-block w-tab-link">
-              <div>4&quot; x 4&quot;</div>
+            <a id="dimensions-3" data-w-tab="4 ' x 7 '" class="tab-item w-inline-block w-tab-link w--current preselected-area">
+              <div class="preselected-width">4 </div>' &nbsp; x &nbsp; <div class="preselected-height"> 7 </div>'
             </a>
             <a data-w-tab="Custom" class="tab-item w-inline-block w-tab-link w--current">
               <div>Custom</div>
             </a>
           </div>
           <div class="tabs-content w-tab-content">
-            <div data-w-tab="2&quot; x 2&quot;" class="w-tab-pane"></div>
-            <div data-w-tab="3&quot; x 3&quot;" class="w-tab-pane"></div>
-            <div data-w-tab="4&quot; x 4&quot;" class="w-tab-pane"></div>
+            <div data-w-tab="2 ' x  4 '" class="w-tab-pane"></div>
+            <div data-w-tab="3 ' x  6 '" class="w-tab-pane"></div>
+            <div data-w-tab="4 ' x  7 '" class="w-tab-pane"></div>
             <div data-w-tab="Custom" class="w-tab-pane w--tab-active">
-              <div class="div-block"><select id="field" name="field" data-name="Field" class="size-selection w-select">
-                  <option value="">Select a size</option>
-                  <option value="First">1 in.</option>
-                  <option value="Second">1.25 in.</option>
-                  <option value="Third">1.5 in.</option>
-                  <option value="Fourth">1.75 in.</option>
-                </select>
-                <div class="text-block-2">X</div><select id="field-3" name="field-3" data-name="Field 3" class="size-selection w-select">
-                  <option value="">Select a size</option>
-                  <option value="First">1 in.</option>
-                  <option value="Second">1.25 in.</option>
-                  <option value="Third">1.5 in.</option>
-                  <option value="Fourth">1.75 in.</option>
-                </select>
+              <div class="text-block">WIDTH: </div>
+              <div class="div-block">
+                <div><input id="field" class="size-selection w-select" name="field" data-name="Field" placeholder="Feet"
+                    type="text"></div>
+                <div class="text-block-2">'</div>
+
+                <div><input id="field-3" class="size-selection w-select" name="field-3" data-name="Field-3"
+                    placeholder="Inches" type="text">
+                </div>
+                <div class="text-block-2">"</div>
+              </div>
+              <div class="spacer-medium"></div>
+              <div class="text-block">HEIGHT: </div>
+
+              <div class="div-block">
+                <div><input id="field-2" class="size-selection w-select" name="field" data-name="Field-2"
+                    placeholder="Feet" type="text"></div>
+                <div class="text-block-2">'</div>
+
+                <div><input id="field-4" class="size-selection w-select" name="field-3" data-name="Field-4"
+                    placeholder="Inches" type="text">
+                </div>
+                <div class="text-block-2">"</div>
               </div>
             </div>
           </div>
@@ -84,13 +99,13 @@
         <div data-current="Custom" data-easing="ease" data-duration-in="300" data-duration-out="100" class="w-tabs">
           <div class="tabs-menu size w-tab-menu">
             <a data-w-tab="50" class="tab-item w-inline-block w-tab-link">
-              <div>50</div>
+              <div id="quantity" class="preselected-quantity">50</div>
             </a>
             <a data-w-tab="100" class="tab-item w-inline-block w-tab-link">
-              <div>100</div>
+              <div id="quantity-2" class="preselected-quantity">100</div>
             </a>
             <a data-w-tab="200" class="tab-item w-inline-block w-tab-link">
-              <div>200</div>
+              <div id="quantity-3" class="preselected-quantity">200</div>
             </a>
             <a data-w-tab="Custom" class="tab-item w-inline-block w-tab-link w--current">
               <div>Custom</div>
@@ -100,31 +115,34 @@
             <div data-w-tab="50" class="w-tab-pane"></div>
             <div data-w-tab="100" class="w-tab-pane"></div>
             <div data-w-tab="200" class="w-tab-pane"></div>
-            <div data-w-tab="Custom" class="w-tab-pane w--tab-active"><input class="text-field w-input" maxlength="256" name="Quantity" data-name="Quantity" placeholder="Enter your quantity" type="text" id="quantity-input"></div>
+            <div data-w-tab="Custom" class="w-tab-pane w--tab-active"><input class="text-field w-input" maxlength="256"
+                name="Quantity" data-name="Quantity" placeholder="Enter your quantity" type="text" id="quantity-input">
+            </div>
           </div>
         </div>
       </div>
       <div class="spacer-medium"></div>
-      <h2 class="pricing">Total Price: $<span id="price-display">15.99</span></h2>
-      <div class="spacer-medium"></div><input type="submit" data-wait="Please wait..." class="upload-button w-button" value="UPLOAD ARTWORK">
+      <h2 class="pricing">Total Price: $<span id="price-display">0.00</span></h2>
+      <div class="spacer-medium"></div><input type="submit" data-wait="Please wait..." class="upload-button w-button"
+        value="UPLOAD ARTWORK">
 
 
       <script>
-        document.addEventListener("DOMContentLoaded", function() {
+        document.addEventListener("DOMContentLoaded", function () {
           // Function to update the total price based on selected options and quantity
           function updateTotalPrice() {
             // Get selected width and height values
-            var selectedWidth = getNumericValue(document.getElementById('field').value);
-            var selectedHeight = getNumericValue(document.getElementById('field-3').value);
+            var feetWidth = parseFloat(document.getElementById('field').value);
+            var inchWidth = parseFloat(document.getElementById('field-3').value);
+            var selectedWidth = (isNaN(feetWidth) ? 0 : feetWidth * 12) + (isNaN(inchWidth) ? 0 : inchWidth);
 
-            console.log(selectedWidth, selectedHeight)
-            // var selectedWidth = parseFloat(document.getElementById('field').value);
-            // var selectedHeight = parseFloat(document.getElementById('field-3').value);
-
+            var feetHeight = parseFloat(document.getElementById('field-2').value);
+            var inchHeight = parseFloat(document.getElementById('field-4').value);
+            var selectedHeight = (isNaN(feetHeight) ? 0 : feetHeight * 12) + (isNaN(inchHeight) ? 0 : inchHeight);
 
             // Get the quantity value
             var quantity = parseFloat(document.getElementById('quantity-input').value);
-            
+
             // Check if the values are valid numbers
             if (isNaN(selectedWidth) || isNaN(selectedHeight) || isNaN(quantity)) {
               // Display an error message or handle the invalid input as needed
@@ -133,31 +151,89 @@
             }
 
             // Calculate area, apply multipliers, and update the total price
-            var area = selectedWidth * selectedHeight * 0.95;
-            console.log(area)
-            var totalPrice = area * quantity;
-            console.log(totalPrice)
+
+            function calculatePrice(desiredSquareInches) {
+              console.log(desiredSquareInches, "area")
+              // Constants
+              const originalPrice = 12.99;
+              const priceIncreasePerSquareInch = 0.01743125; // Calculated to reach $2400 at 144,000 square inches
+
+              // Calculate the new price based on the user's desired square inches
+              var newPrice = originalPrice + (desiredSquareInches * priceIncreasePerSquareInch);
+
+
+              console.log(newPrice, "price")
+              return newPrice;
+            }
+            var area = selectedWidth * selectedHeight;
+            let totalPrice
+
+            // If either inchWidth or inchHeight is empty, set them to zero
+            if (inchWidth === '' || inchHeight === '') {
+              inchWidth = 0;
+              inchHeight = 0;
+            }
+
+            if (area > 144) {
+              totalPrice = calculatePrice(area) * quantity
+            } else { totalPrice = 12.99 * quantity }
+
             document.getElementById('price-display').innerText = totalPrice.toFixed(2);
           }
 
-          function getNumericValue(optionValue) {
-            switch (optionValue) {
-              case 'First':
-                return 1;
-              case 'Second':
-                return 1.25;
-              case 'Third':
-                return 1.5;
-              case 'Fourth':
-                return 1.75;
-              default:
-                return NaN;
+          function updatePreselectedArea(elementId, selectedId) {
+            // Check if the selected ID matches the desired condition (e.g., 'dimensions')
+            if (selectedId === elementId) {
+              // Get the elements containing the numbers
+              var widthElement = document.getElementById(elementId).querySelector('.preselected-width');
+              var heightElement = document.getElementById(elementId).querySelector('.preselected-height');
+
+              // Extract the numbers and convert them to integers
+              var width = parseInt(widthElement.textContent.trim());
+              var height = parseInt(heightElement.textContent.trim());
+
+              // Calculate the product
+              var preselectedArea = width * height;
+              console.log("preselectedArea for " + selectedId + ": " + preselectedArea);
+              return preselectedArea; // Return the preselectedArea value
             }
+            return null; // Return null if the condition is not met
           }
+
+          // Function to get the ID of the currently active tab
+          function getSelectedTabId() {
+            var selectedTab = document.querySelector('.tab-item.w-tab-link.w--current');
+            return selectedTab ? selectedTab.id : null;
+          }
+
+          // Attach event listeners for tab clicks
+          var tabLinks = document.querySelectorAll('.tab-item.w-tab-link');
+          tabLinks.forEach(function (tabLink) {
+            tabLink.addEventListener('click', function () {
+              var selectedId = this.id;
+              updatePreselectedArea('dimensions', selectedId);
+              updatePreselectedArea('dimensions-2', selectedId);
+              updatePreselectedArea('dimensions-3', selectedId);
+            });
+          });
+
+          function updatePreselectedQuantity(elementId) {
+            // Get the elements containing the numbers
+            var quantityElement = document.getElementById(elementId);
+            // Extract the numbers and convert them to integers
+            var quantity = parseInt(quantityElement.textContent.trim());
+            console.log("quantity", quantity)
+          }
+
+          updatePreselectedQuantity('quantity');
+          updatePreselectedQuantity('quantity-2');
+          updatePreselectedQuantity('quantity-3');
 
           // Attach event listeners for changes in options and quantity
           document.getElementById('field').addEventListener('change', updateTotalPrice);
           document.getElementById('field-3').addEventListener('change', updateTotalPrice);
+          document.getElementById('field-2').addEventListener('change', updateTotalPrice);
+          document.getElementById('field-4').addEventListener('change', updateTotalPrice);
           document.getElementById('quantity-input').addEventListener('input', updateTotalPrice);
         });
       </script>
@@ -170,7 +246,10 @@
       <div>Oops! Something went wrong while submitting the form.</div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=65e798e3d4b6db219c70deca" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=65e798e3d4b6db219c70deca"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 </body>
+
 </html>
